[tool.poetry]
name = "orange"
version = "0.1.0"
description = "Text based UI for 'Ask HN: Who is hiring?' threads"
authors = ["Ayush Dwivedi <itsayushdwivedi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
py_cui = "^0.0.2"
asyncio = "^3.4"
aiohttp = "^3.6"
aiofiles = "^0.4.0"
requests = "^2.23"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
